@@ -205,12 +205,9 @@ void PWSprefs::DeleteInstance()
 
 bool PWSprefs::SetConfigFile(const stringT &fn)
 {
-  if (pws_os::FileExists(fn)) {
-    m_configfilename = fn;
-    m_userSetCfgFile = true;
-    return true;
-  } else
-    return false;
+  m_configfilename = fn;
+  m_userSetCfgFile = true;
+  return pws_os::FileExists(fn);
 }
 
 PWSprefs::PWSprefs() : m_pXML_Config(NULL)
